--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,32 +13,14 @@ on:
   pull_request:
 
 env:
-  APP_NAME: eux-journal
-  IMAGE: ghcr.io/${{ github.repository }}/eux-journal
-  DATABASE_HOST: localhost
-  DATABASE_PORT: 5432
-  DATABASE_DATABASE: postgres
-  DATABASE_USERNAME: postgres
-  DATABASE_PASSWORD: postgres
+  APP_NAME: eux-journalarkivar-naisjob
+  IMAGE: ghcr.io/${{ github.repository }}/eux-journalarkivar-naisjob
   READER_TOKEN: ${{ secrets.READER_TOKEN }}
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    services:
-      postgres:
-        image: postgres:14
-        env:
-          POSTGRES_PASSWORD: postgres
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
 
     steps:
       - name: Checkout
