--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,31 +14,14 @@ on:
 concurrency: release
 
 env:
-  APP_NAME: eux-journal
+  APP_NAME: eux-journalarkivar-naisjob
   READER_TOKEN: ${{ secrets.READER_TOKEN }}
-  DATABASE_HOST: localhost
-  DATABASE_PORT: 5432
-  DATABASE_DATABASE: postgres
-  DATABASE_USERNAME: postgres
-  DATABASE_PASSWORD: postgres
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   build:
     name: 'Build'
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:14
-        env:
-          POSTGRES_PASSWORD: postgres
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
 
     steps:
       - name: Checkout
@@ -90,20 +73,20 @@ jobs:
       docker-image: >
         ${{ steps.docker-build-push.outputs.image }}
 
-  deploy-q1:
-    name: 'Deploy to q1'
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-      - name: 'Calling nais deploy action for q1'
-        uses: nais/deploy/actions/deploy@v2
-        env:
-          CLUSTER: dev-gcp
-          RESOURCE: .nais/nais.yaml
-          VAR: image=${{ needs.build.outputs.docker-image }}
-          VARS: .nais/q1.yaml
-          PRINT_PAYLOAD: true
+#  deploy-q1:
+#    name: 'Deploy to q1'
+#    runs-on: ubuntu-latest
+#    needs: build
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: 'Calling nais deploy action for q1'
+#        uses: nais/deploy/actions/deploy@v2
+#        env:
+#          CLUSTER: dev-gcp
+#          RESOURCE: .nais/nais.yaml
+#          VAR: image=${{ needs.build.outputs.docker-image }}
+#          VARS: .nais/q1.yaml
+#          PRINT_PAYLOAD: true
 
   deploy-q2:
     name: 'Deploy to q2'
@@ -120,17 +103,17 @@ jobs:
           VARS: .nais/q2.yaml
           PRINT_PAYLOAD: true
 
-  prod:
-    name: 'Deploy to prod'
-    runs-on: ubuntu-latest
-    needs: [build, deploy-q1, deploy-q2]
-    steps:
-      - uses: actions/checkout@v4
-      - name: 'Calling nais deploy action for prod'
-        uses: nais/deploy/actions/deploy@v2
-        env:
-          CLUSTER: prod-gcp
-          RESOURCE: .nais/nais.yaml
-          VAR: image=${{ needs.build.outputs.docker-image }}
-          VARS: .nais/prod.yaml
-          PRINT_PAYLOAD: true
+#  prod:
+#    name: 'Deploy to prod'
+#    runs-on: ubuntu-latest
+#    needs: [build, deploy-q1, deploy-q2]
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: 'Calling nais deploy action for prod'
+#        uses: nais/deploy/actions/deploy@v2
+#        env:
+#          CLUSTER: prod-gcp
+#          RESOURCE: .nais/nais.yaml
+#          VAR: image=${{ needs.build.outputs.docker-image }}
+#          VARS: .nais/prod.yaml
+#          PRINT_PAYLOAD: true
