--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -1,8 +1,4 @@
-name: eux-nav-rinasak
-ingress: https://eux-nav-rinasak.intern.nav.no
-database:
-  name: eux-nav-rinasak-db
-  tier: db-custom-1-3840
+name: eux-journalarkivar-naisjob
 application:
   eux-neessi:
     name: eux-neessi
