--- a/.nais/q1.yaml
+++ b/.nais/q1.yaml
@@ -1,8 +1,4 @@
-name: eux-nav-rinasak-q1
-ingress: https://eux-nav-rinasak-q1.intern.dev.nav.no
-database:
-  name: eux-nav-rinasak-db-q1
-  tier: db-f1-micro
+name: eux-journalarkivar-naisjob-q1
 application:
   eux-neessi:
     name: eux-neessi-q1
