--- a/.nais/q1.yaml
+++ b/.nais/q1.yaml
@@ -1,17 +1,12 @@
 name: eux-journalarkivar-naisjob-q1
 application:
-  eux-neessi:
-    name: eux-neessi-q1
+  eux-journalarkivar:
+    name: eux-journalarkivar-q1
     namespace: eessibasis
-  eux-journal:
-    name: eux-journal-q1
-    namespace: eessibasis
-  eux-nav-rinasak-datasync:
-    name: eux-nav-rinasak-datasync-q1
-    namespace: eessibasis
-  eux-fagmodul-journalfoering:
-    name: eux-fagmodul-journalfoering-q1
-    namespace: eessibasis
+client:
+  eux-journalarkivar:
+    endpoint: http://eux-journalarkivar-q1
+    scope: api://dev-gcp.eessibasis.eux-journalarkivar-q1/.default
 cluster:
   fss: dev-fss
   gcp: dev-gcp
