--- a/.nais/q2.yaml
+++ b/.nais/q2.yaml
@@ -1,17 +1,12 @@
 name: eux-journalarkivar-naisjob-q2
 application:
-  eux-neessi:
-    name: eux-neessi-q2
+  eux-journalarkivar:
+    name: eux-journalarkivar-q2
     namespace: eessibasis
-  eux-journal:
-    name: eux-journal-q2
-    namespace: eessibasis
-  eux-nav-rinasak-datasync:
-    name: eux-nav-rinasak-datasync-q2
-    namespace: eessibasis
-  eux-fagmodul-journalfoering:
-    name: eux-fagmodul-journalfoering-q2
-    namespace: eessibasis
+client:
+  eux-journalarkivar:
+    endpoint: http://eux-journalarkivar-q2
+    scope: api://dev-gcp.eessibasis.eux-journalarkivar-q2/.default
 cluster:
   fss: dev-fss
   gcp: dev-gcp
