--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,25 @@ spring:
   main:
     web-application-type: none
     banner-mode: "off"
+
+# noinspection SpringBootApplicationYaml
+no.nav.security.jwt:
+  issuer:
+    azuread:
+      discoveryurl: ${AZURE_APP_WELL_KNOWN_URL}
+      accepted-audience: ${AZURE_APP_CLIENT_ID}
+
+  client:
+    registration:
+
+      eux-journalarkivar-credentials:
+        token-endpoint-url: ${AZURE_OPENID_CONFIG_TOKEN_ENDPOINT}
+        grant-type: client_credentials
+        scope: ${CLIENT_EUXJOURNALARKIVAR_SCOPE}
+        authentication:
+          client-id: ${AZURE_APP_CLIENT_ID}
+          client-jwk: ${AZURE_APP_JWK}
+          client-auth-method: private_key_jwt
+
+endpoint:
+  euxjournalarkivar: ${CLIENT_EUXJOURNALARKIVAR_ENDPOINT}
