--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -73,20 +73,20 @@ jobs:
       docker-image: >
         ${{ steps.docker-build-push.outputs.image }}
 
-#  deploy-q1:
-#    name: 'Deploy to q1'
-#    runs-on: ubuntu-latest
-#    needs: build
-#    steps:
-#      - uses: actions/checkout@v4
-#      - name: 'Calling nais deploy action for q1'
-#        uses: nais/deploy/actions/deploy@v2
-#        env:
-#          CLUSTER: dev-gcp
-#          RESOURCE: .nais/nais.yaml
-#          VAR: image=${{ needs.build.outputs.docker-image }}
-#          VARS: .nais/q1.yaml
-#          PRINT_PAYLOAD: true
+  deploy-q1:
+    name: 'Deploy to q1'
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - name: 'Calling nais deploy action for q1'
+        uses: nais/deploy/actions/deploy@v2
+        env:
+          CLUSTER: dev-gcp
+          RESOURCE: .nais/nais.yaml
+          VAR: image=${{ needs.build.outputs.docker-image }}
+          VARS: .nais/q1.yaml
+          PRINT_PAYLOAD: true
 
   deploy-q2:
     name: 'Deploy to q2'
