--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -7,7 +7,7 @@ metadata:
     team: eessibasis
 spec:
   image: {{ image }}
-  schedule: '* * * * *'
+  schedule: {{ schedule }}
   ttlSecondsAfterFinished: 340
   backoffLimit: 2
   successfulJobsHistoryLimit: 10
