--- a/.nais/q1.yaml
+++ b/.nais/q1.yaml
@@ -1,6 +1,8 @@
 name: eux-journalarkivar-naisjob-q1
 schedule: "0 1 * * *"
 
+arkivarprosess: ferdigstill
+
 application:
   eux-journalarkivar:
     name: eux-journalarkivar-q1
