--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -103,6 +103,36 @@ jobs:
           VARS: .nais/q2.yaml
           PRINT_PAYLOAD: true
 
+  deploy-feilregistrer-q2:
+    name: 'Deploy to q2'
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - name: 'Calling nais deploy action for q2'
+        uses: nais/deploy/actions/deploy@v2
+        env:
+          CLUSTER: dev-gcp
+          RESOURCE: .nais/nais.yaml
+          VAR: image=${{ needs.build.outputs.docker-image }}
+          VARS: .nais/feilregistrer/q2.yaml
+          PRINT_PAYLOAD: true
+
+  deploy-ferdigstill-q2:
+    name: 'Deploy to q2'
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - name: 'Calling nais deploy action for q2'
+        uses: nais/deploy/actions/deploy@v2
+        env:
+          CLUSTER: dev-gcp
+          RESOURCE: .nais/nais.yaml
+          VAR: image=${{ needs.build.outputs.docker-image }}
+          VARS: .nais/ferdigstill/q2.yaml
+          PRINT_PAYLOAD: true
+
 #  prod:
 #    name: 'Deploy to prod'
 #    runs-on: ubuntu-latest
