--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -1,6 +1,8 @@
 name: eux-journalarkivar-naisjob
 schedule: "0 1 * * *"
 
+arkivarprosess: ferdigstill
+
 application:
   eux-journalarkivar:
     name: eux-journalarkivar
