--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -73,8 +73,8 @@ jobs:
       docker-image: >
         ${{ steps.docker-build-push.outputs.image }}
 
-  deploy-q1:
-    name: 'Deploy to q1'
+  deploy-feilregistrer-q1:
+    name: 'Deploy feilregistrer to q1'
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -85,22 +85,22 @@ jobs:
           CLUSTER: dev-gcp
           RESOURCE: .nais/nais.yaml
           VAR: image=${{ needs.build.outputs.docker-image }}
-          VARS: .nais/q1.yaml
+          VARS: .nais/feilregistrer/q1.yaml
           PRINT_PAYLOAD: true
 
-  deploy-q2:
-    name: 'Deploy to q2'
+  deploy-ferdigstill-q1:
+    name: 'Deploy ferdigstill to q1'
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v4
-      - name: 'Calling nais deploy action for q2'
+      - name: 'Calling nais deploy action for q1'
         uses: nais/deploy/actions/deploy@v2
         env:
           CLUSTER: dev-gcp
           RESOURCE: .nais/nais.yaml
           VAR: image=${{ needs.build.outputs.docker-image }}
-          VARS: .nais/q2.yaml
+          VARS: .nais/ferdigstill/q1.yaml
           PRINT_PAYLOAD: true
 
   deploy-feilregistrer-q2:
@@ -133,10 +133,10 @@ jobs:
           VARS: .nais/ferdigstill/q2.yaml
           PRINT_PAYLOAD: true
 
-#  prod:
-#    name: 'Deploy to prod'
+#  deploy-feilregistrer-prod:
+#    name: 'Deploy feilregistrer to prod'
 #    runs-on: ubuntu-latest
-#    needs: [build, deploy-q1, deploy-q2]
+#    needs: [build, deploy-ferdigstill-q1, deploy-ferdigstill-q2, deploy-feilregistrer-q1, deploy-feilregistrer-q2]
 #    steps:
 #      - uses: actions/checkout@v4
 #      - name: 'Calling nais deploy action for prod'
@@ -145,5 +145,20 @@ jobs:
 #          CLUSTER: prod-gcp
 #          RESOURCE: .nais/nais.yaml
 #          VAR: image=${{ needs.build.outputs.docker-image }}
-#          VARS: .nais/prod.yaml
+#          VARS: .nais/feilregistrer/prod.yaml
+#          PRINT_PAYLOAD: true
+#
+#  deploy-ferdigstill-prod:
+#    name: 'Deploy ferdigstill to prod'
+#    runs-on: ubuntu-latest
+#    needs: [build, deploy-ferdigstill-q1, deploy-ferdigstill-q2, deploy-feilregistrer-q1, deploy-feilregistrer-q2]
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: 'Calling nais deploy action for prod'
+#        uses: nais/deploy/actions/deploy@v2
+#        env:
+#          CLUSTER: prod-gcp
+#          RESOURCE: .nais/nais.yaml
+#          VAR: image=${{ needs.build.outputs.docker-image }}
+#          VARS: .nais/ferdigstill/prod.yaml
 #          PRINT_PAYLOAD: true
