--- a/.nais/ferdigstill/q1.yaml
+++ b/.nais/ferdigstill/q1.yaml
@@ -1,5 +1,5 @@
-name: eux-journalarkivar-naisjob-q1
-schedule: "0 1 * * *"
+name: eux-journalarkivar-ferdigstill-naisjob-q1
+schedule: "* * * * *"
 
 arkivarprosess: ferdigstill
 
