--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   image: {{ image }}
   schedule: "{{ schedule }}"
+  timeZone: Europe/Oslo
   ttlSecondsAfterFinished: 340
   backoffLimit: 2
   successfulJobsHistoryLimit: 10
