--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -147,3 +147,18 @@ jobs:
           VAR: image=${{ needs.build.outputs.docker-image }}
           VARS: .nais/ferdigstill/prod.yaml
           PRINT_PAYLOAD: true
+
+  deploy-feilregistrer-prod:
+    name: 'Deploy feilregistrer to prod'
+    runs-on: ubuntu-latest
+    needs: [build, deploy-feilregistrer-q1, deploy-feilregistrer-q2]
+    steps:
+      - uses: actions/checkout@v4
+      - name: 'Calling nais deploy action for prod'
+        uses: nais/deploy/actions/deploy@v2
+        env:
+          CLUSTER: dev-gcp
+          RESOURCE: .nais/nais.yaml
+          VAR: image=${{ needs.build.outputs.docker-image }}
+          VARS: .nais/feilregistrer/prod.yaml
+          PRINT_PAYLOAD: true
