--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -136,7 +136,7 @@ jobs:
   deploy-ferdigstill-prod:
     name: 'Deploy ferdigstill to prod'
     runs-on: ubuntu-latest
-    needs: [build, deploy-ferdigstill-q1, deploy-ferdigstill-q2]
+    needs: [deploy-ferdigstill-q1, deploy-ferdigstill-q2]
     steps:
       - uses: actions/checkout@v4
       - name: 'Calling nais deploy action for prod'
@@ -151,7 +151,7 @@ jobs:
   deploy-feilregistrer-prod:
     name: 'Deploy feilregistrer to prod'
     runs-on: ubuntu-latest
-    needs: [build, deploy-feilregistrer-q1, deploy-feilregistrer-q2]
+    needs: [deploy-feilregistrer-q1, deploy-feilregistrer-q2]
     steps:
       - uses: actions/checkout@v4
       - name: 'Calling nais deploy action for prod'
