--- a/.nais/feilregistrer/q2.yaml
+++ b/.nais/feilregistrer/q2.yaml
@@ -1,5 +1,5 @@
 name: eux-journalarkivar-feilregistrer-naisjob-q2
-schedule: "50 10 * * *"
+schedule: "0 14 25 11 *"
 
 arkivarprosess: feilregistrer
 
